--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
     "motion": "^12.23.22",
-    "next": "14.2.4",
+    "next": "^15.5.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
